tests/ui/fail_model_config_unsupported_retention.rs
use ai_client::openai::responses::{Gpt4oMini, PromptCacheRetention};

fn main() {
    let _ = Gpt4oMini::config().prompt_cache_retention(PromptCacheRetention::Hours24);
}
